[package]
name = "metrics"
version = "0.1.0"
edition = "2024"
exclude = ["/crates/", "/index/"]

[dependencies]
async-compression = { version = "0.4.42", features = ["futures-io", "gzip"] }
flate2 = "1.1.9"
futures = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
syn = { version = "2.0.118", features = ["full", "extra-traits", "visit"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tokio-tar = "0.3.1"
proc-macro2 = "1.0.106"
glob = "0.3.3"
parquet = { version="59.0.0", features = ["arrow", "async"] }
arrow = "59.0.0"
serde_arrow = { version="0.14.2", features = ["arrow-59"] }
serde = "1.0.228"
clap = { version="4.6.1", features = ["cargo"] }
crates-index = { version = "3.14.0", features = ["git", "git-https", "parallel"] }
memmap2 = "0.9.11"
rayon = "1.12.0"
home = "0.5.12"
serde_json = "1.0.150"
anyhow = "1.0.103"
bitcode = { version="0.6.9", features=["derive"] }
regex = "1.12.4"
